[gd_scene load_steps=4 format=3 uid="uid://ckyis3mr2iwp0"]

[ext_resource type="Script" path="res://Menu.gd" id="1_3bfsk"]
[ext_resource type="Texture2D" uid="uid://bb62lvfasyti8" path="res://assets/Ui/Logo.png" id="2_f5nj8"]
[ext_resource type="Texture2D" uid="uid://b66hyescan1mu" path="res://assets/characters/Idle.png" id="3_kiiw6"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bfsk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -260.0
offset_right = 167.0
grow_horizontal = 2
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Credit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credit"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(590, 207)
texture = ExtResource("2_f5nj8")

[node name="Idle" type="Sprite2D" parent="."]
position = Vector2(297, 535)
scale = Vector2(10, 10)
texture = ExtResource("3_kiiw6")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
